[gd_scene load_steps=25 format=3 uid="uid://dahgvmrgtix2i"]

[ext_resource type="Texture2D" uid="uid://b6t2mhsndw0wm" path="res://Assets/Sprites/HoodedCharacter.png" id="2_4wocn"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="2_x28dm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iacq3"]
atlas = ExtResource("2_4wocn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1s6m"]
atlas = ExtResource("2_4wocn")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh2cm"]
atlas = ExtResource("2_4wocn")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyl86"]
atlas = ExtResource("2_4wocn")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8udk"]
atlas = ExtResource("2_4wocn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6lxw"]
atlas = ExtResource("2_4wocn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeqf3"]
atlas = ExtResource("2_4wocn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tttb7"]
atlas = ExtResource("2_4wocn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwax7"]
atlas = ExtResource("2_4wocn")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_svq5w"]
atlas = ExtResource("2_4wocn")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvtck"]
atlas = ExtResource("2_4wocn")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8tj0"]
atlas = ExtResource("2_4wocn")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ocr"]
atlas = ExtResource("2_4wocn")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jucox"]
atlas = ExtResource("2_4wocn")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_40qvb"]
atlas = ExtResource("2_4wocn")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d858"]
atlas = ExtResource("2_4wocn")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4dmp"]
atlas = ExtResource("2_4wocn")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjjmg"]
atlas = ExtResource("2_4wocn")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ehvu"]
atlas = ExtResource("2_4wocn")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w5qp"]
atlas = ExtResource("2_4wocn")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ca6vv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iacq3")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1s6m")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh2cm")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyl86")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8udk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6lxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeqf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tttb7")
}],
"loop": true,
"name": &"move_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwax7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svq5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvtck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8tj0")
}],
"loop": true,
"name": &"move_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ocr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jucox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40qvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d858")
}],
"loop": true,
"name": &"move_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4dmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjjmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ehvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w5qp")
}],
"loop": true,
"name": &"move_up",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1vf8k"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("2_x28dm")

[node name="AttackSpawnDown" type="Node2D" parent="."]
position = Vector2(0, 12)

[node name="AttackSpawnUp" type="Node2D" parent="."]
position = Vector2(0, -11)

[node name="AttackSpawnLeft" type="Node2D" parent="."]
position = Vector2(-10, 0)

[node name="AttackSpawnRight" type="Node2D" parent="."]
position = Vector2(10, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_ca6vv")
animation = &"idle_down"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1vf8k")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_timer_timeout"]
